--- a/html5up-dimension/Wesbite.html
+++ b/html5up-dimension/Wesbite.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>Collin Donaghy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -25,15 +25,16 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Collin Donaghy</h1>
-								<p>This is a website dealing with my course work in Writing and Digital Media at Virginia Tech. It discusses works in the arts, with topics such as; music, fashion and film.</p>
+								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
+								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Blog 1</a></li>
-								<li><a href="#work">Blog 2</a></li>
-								<li><a href="#about">Podcast</a></li>
-								<li><a href="#contact">Video</a></li>
+								<li><a href="#intro">My Life</a></li>
+								<li><a href="#work">Work</a></li>
+								<li><a href="#about">About Me</a></li>
+								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -43,7 +44,7 @@
 					<div id="main">
 
 						<!-- Intro -->
-							<article id="intro">
+							<article id="My Life">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
